updated stylesheet link

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -12,7 +12,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="http://127.0.0.1:5500/Develop/public/assets/css/styles.css" />
   </head>
 
   <body>
