--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -12,12 +12,12 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="http://127.0.0.1:5500/Develop/public/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
 
   <body>
     <nav class="navbar bg-info">
-      <a class="navbar-brand text-light p-3" href="http://127.0.0.1:5500/Develop/public/index.html">Note Taker </a>
+      <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
